--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <button id="newBook">New Book</button>
-    <form action="get" class="hidden">
+    <form action="" class="hidden">
         <label for="title">Title:</label>
         <input type="text" id="title">
         <label for="author">Author:</label>
@@ -24,7 +24,7 @@
             <label for="notRead">No</label>
             <input type="radio" value="false" name="isRead" id="notRead">
         </fieldset>
-        <button id="submitButton">Submit</button>
+        <input type="button" id="submitButton" value="Submit">
     </form>
     <div id="container">
 
