Store radio button value

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <legend>Have you read it yet?</legend>
                     </div>
                     <div id="radioButtons">
-                        <input type="radio" value="yes" name="isRead" id="read">
+                        <input type="radio" value="true" name="isRead" id="read">
                         <label for="read">Yes</label>
-                        <input type="radio" value="no" name="isRead" id="notRead">
+                        <input type="radio" value="false" name="isRead" id="notRead">
                         <label for="notRead">No</label>
                     </div>
                 </fieldset>
