Refactor code and update README

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div id="radioButtons">
                         <input type="radio" value="true" name="isRead" id="read">
                         <label for="read">Yes</label>
-                        <input type="radio" value="false" name="isRead" id="notRead">
+                        <input type="radio" value="false" name="isRead" id="notRead" checked>
                         <label for="notRead">No</label>
                     </div>
                 </fieldset>
