Add instructions on how to fill out the form, and adjust submit button color for clarity

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>The Library Is Open</h1>
-        <p>Enter your books and see them displayed below!</p>
+        <p>Please include both the title and the author when adding books. And quiet down &mdash; this is a library!</p>
         <form action="">
             <div id="topForm">
                 <div class="labelContainer">
